--- a/browser-test/upload.html
+++ b/browser-test/upload.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <!-- @file      browser-test/upload.html
-  --            Web page which allows to exercise the upload method of the slice server.
+  --            Web page which allows to exercise the upload method of the remote data service.
   -- @author    Wes Garland, wes@kingsds.network
   -- @date      Oct 2021
   -->
 <html>
   <head>
     <meta charset="utf-8">
-    <title>DCP slice server test: upload</title>
+    <title>DCP remote data service test: upload</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://portal.distributed.computer/bravojs/bravo.js"></script>
     <base href="http://wes.office.kingsds.network:3521">
@@ -15,17 +15,19 @@
   <body onload="module.main.init()">
     <h3>This page lets you upload one element of the input set</h3>
     <form action="/methods/upload" method="post">
-      <p><label><span>job identifier:     </span><input type=text name="job"></label>   (optional)</p>
-      <p><label><span>slice identifier:   </span><input type=text name="slice"></label> (optional)</p>
-      <p><label><span>slice datum:        </span><textarea        name="datum"></textarea></p>
+      <p><label><span>job identifier:     </span><input type=text name="job"></label>     (optional)</p>
+      <p><label><span>element identifier: </span><input type=text name="element"></label> (optional)</p>
+      <p><label><span>element type:       </span><select          name="elementType"></label></p>
+      <p><label><span>content:            </span><textarea        name="content"></textarea></p>
       <p><label><span>content type:       </span><select          name="contentType"></select> <button>Upload</button></p>
     </form>
     <br><br>
     <form action="/methods/upload" method="post" enctype="multipart/form-data">
-      <p><label><span>job identifier:     </span><input type=text name="job"></label> (optional)</p>
-      <p><label><span>slice identifier:   </span><input type=text name="slice"></label> (optional)</p>
-      <p><label><span>slice datum:        </span><input type=file name="datum"></p>
-      <p><label><span>content type:       </span><select name="contentType"></select> <button>Upload</button></p>
+      <p><label><span>job identifier:     </span><input type=text name="job"></label>     (optional)</p>
+      <p><label><span>element identifier: </span><input type=text name="element"></label> (optional)</p>
+      <p><label><span>element type:       </span><select          name="elementType"></label></p>
+      <p><label><span>content:            </span><input type=file name="content"></p>
+      <p><label><span>content type:       </span><select          name="contentType"></select> <button>Upload</button></p>
     </form>
   </body>
   <script>'use strict';
@@ -42,6 +44,18 @@ module.declare([], function(require, exports, module)
       for (let ct of ['text/plain', 'application/json', 'application/x-kvin', 'application/octet-stream'])
       {
         let option = new Option(ct);
+        el.options[el.options.length++] = option;
+      }
+    }
+
+    els = document.querySelectorAll('SELECT[name="elementType"]');
+
+    for (let el of els)
+    {
+      /* Append usual list of element types to each select element */
+      for (let et of ['slice', 'result', 'argument', 'work-function'])
+      {
+        let option = new Option(et);
         el.options[el.options.length++] = option;
       }
     }
