--- a/browser-test/testUpload.html
+++ b/browser-test/testUpload.html
@@ -27,7 +27,7 @@
     <form onsubmit='getData(event)'>
       <p><label><span>result link:        </span><input type=text       name="resultlink"></label>     (optional)</p>
       </label></p>
-      <p><button >Upload</button></p>
+      <p><button >Get</button></p>
     </form>    
     <br><br>
     Response:<br>
